improved (with an array)
pastGuesses =[]

added another IF statement to only allow positive integers as input.

**still have issue with Math.abs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Numer Guessing Game</title>
+  <title>Number Guessing Game 4</title>
   
   
   
@@ -51,7 +51,8 @@ let guessSubmit = document.querySelector('.guessSubmit');
 let guessField = document.querySelector('.guessField');
 
 let guessCount = 1;
-let resetButton;
+let resetButton; 
+let pastGuesses = []; //defined outside checkGuess function 
       
      
     </script>
